FphpParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 /Users/andrewrumble/Fphp.g 2011-05-12 18:25:28

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class FphpParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "INDENT", "DEDENT", "IF", "ELSE", "ELIF", "RETURN", "EQ", "GT", "LT", "PRINT", "CLASS", "EXTENDS", "EACH", "WHILE", "FOR", "NEW", "L_PAREN", "R_PAREN", "OBJECT_MEMBER", "QUOTE", "VISIBILITY", "STATIC", "BOOLEAN", "ESC_SEQ", "IDENTIFIER", "VARIABLE", "WS", "INT", "NEWLINE", "UNICODE_ESC", "OCTAL_ESC", "HEX_DIGIT", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "ASSIGNMENT_OPERATOR", "SCOPE", "L_BRACKET", "R_BRACKET", "COMMA", "COLON", "COMMENT", "'\\\\'", "'\\''"
    };
    public static final int EOF=-1;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int INDENT=4;
    public static final int DEDENT=5;
    public static final int IF=6;
    public static final int ELSE=7;
    public static final int ELIF=8;
    public static final int RETURN=9;
    public static final int EQ=10;
    public static final int GT=11;
    public static final int LT=12;
    public static final int PRINT=13;
    public static final int CLASS=14;
    public static final int EXTENDS=15;
    public static final int EACH=16;
    public static final int WHILE=17;
    public static final int FOR=18;
    public static final int NEW=19;
    public static final int L_PAREN=20;
    public static final int R_PAREN=21;
    public static final int OBJECT_MEMBER=22;
    public static final int QUOTE=23;
    public static final int VISIBILITY=24;
    public static final int STATIC=25;
    public static final int BOOLEAN=26;
    public static final int ESC_SEQ=27;
    public static final int IDENTIFIER=28;
    public static final int VARIABLE=29;
    public static final int WS=30;
    public static final int INT=31;
    public static final int NEWLINE=32;
    public static final int UNICODE_ESC=33;
    public static final int OCTAL_ESC=34;
    public static final int HEX_DIGIT=35;
    public static final int PLUS=36;
    public static final int MINUS=37;
    public static final int MULTIPLY=38;
    public static final int DIVIDE=39;
    public static final int ASSIGNMENT_OPERATOR=40;
    public static final int SCOPE=41;
    public static final int L_BRACKET=42;
    public static final int R_BRACKET=43;
    public static final int COMMA=44;
    public static final int COLON=45;
    public static final int COMMENT=46;

    // delegates
    // delegators


        public FphpParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public FphpParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return FphpParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/andrewrumble/Fphp.g"; }


    int level = 0;



    // $ANTLR start "string"
    // /Users/andrewrumble/Fphp.g:70:1: string returns [String value] : ( QUOTE (e1= ESC_SEQ | e1=~ ( '\\\\' | '\\n' | QUOTE ) )* QUOTE | '\\'' (e1= ( ESC_SEQ | ~ ( '\\\\' | '\\n' | '\\'' ) ) )* '\\'' );
    public final String string() throws RecognitionException {
        String value = null;

        Token e1=null;

        try {
            // /Users/andrewrumble/Fphp.g:71:4: ( QUOTE (e1= ESC_SEQ | e1=~ ( '\\\\' | '\\n' | QUOTE ) )* QUOTE | '\\'' (e1= ( ESC_SEQ | ~ ( '\\\\' | '\\n' | '\\'' ) ) )* '\\'' )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==QUOTE) ) {
                alt3=1;
            }
            else if ( (LA3_0==48) ) {
                alt3=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return value;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // /Users/andrewrumble/Fphp.g:71:6: QUOTE (e1= ESC_SEQ | e1=~ ( '\\\\' | '\\n' | QUOTE ) )* QUOTE
                    {
                    match(input,QUOTE,FOLLOW_QUOTE_in_string251); if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                      value = "\"";
                    }
                    // /Users/andrewrumble/Fphp.g:71:29: (e1= ESC_SEQ | e1=~ ( '\\\\' | '\\n' | QUOTE ) )*
                    loop1:
                    do {
                        int alt1=3;
                        int LA1_0 = input.LA(1);

                        if ( (LA1_0==ESC_SEQ) ) {
                            int LA1_2 = input.LA(2);

                            if ( (synpred1_Fphp()) ) {
                                alt1=1;
                            }
                            else if ( (synpred4_Fphp()) ) {
                                alt1=2;
                            }


                        }
                        else if ( ((LA1_0>=INDENT && LA1_0<=OBJECT_MEMBER)||(LA1_0>=VISIBILITY && LA1_0<=BOOLEAN)||(LA1_0>=IDENTIFIER && LA1_0<=INT)||(LA1_0>=UNICODE_ESC && LA1_0<=COMMENT)||LA1_0==48) ) {
                            alt1=2;
                        }


                        switch (alt1) {
                    	case 1 :
                    	    // /Users/andrewrumble/Fphp.g:71:31: e1= ESC_SEQ
                    	    {
                    	    e1=(Token)match(input,ESC_SEQ,FOLLOW_ESC_SEQ_in_string259); if (state.failed) return value;
                    	    if ( state.backtracking==0 ) {
                    	      value += (e1!=null?e1.getText():null) + " ";
                    	    }

                    	    }
                    	    break;
                    	case 2 :
                    	    // /Users/andrewrumble/Fphp.g:71:71: e1=~ ( '\\\\' | '\\n' | QUOTE )
                    	    {
                    	    e1=(Token)input.LT(1);
                    	    if ( (input.LA(1)>=INDENT && input.LA(1)<=OBJECT_MEMBER)||(input.LA(1)>=VISIBILITY && input.LA(1)<=INT)||(input.LA(1)>=UNICODE_ESC && input.LA(1)<=COMMENT)||input.LA(1)==48 ) {
                    	        input.consume();
                    	        state.errorRecovery=false;state.failed=false;
                    	    }
                    	    else {
                    	        if (state.backtracking>0) {state.failed=true; return value;}
                    	        MismatchedSetException mse = new MismatchedSetException(null,input);
                    	        throw mse;
                    	    }

                    	    if ( state.backtracking==0 ) {
                    	      value += (e1!=null?e1.getText():null) + " ";
                    	    }

                    	    }
                    	    break;

                    	default :
                    	    break loop1;
                        }
                    } while (true);

                    match(input,QUOTE,FOLLOW_QUOTE_in_string286); if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                      value += "\"";
                    }

                    }
                    break;
                case 2 :
                    // /Users/andrewrumble/Fphp.g:72:8: '\\'' (e1= ( ESC_SEQ | ~ ( '\\\\' | '\\n' | '\\'' ) ) )* '\\''
                    {
                    match(input,48,FOLLOW_48_in_string298); if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                      value = "\"";
                    }
                    // /Users/andrewrumble/Fphp.g:72:32: (e1= ( ESC_SEQ | ~ ( '\\\\' | '\\n' | '\\'' ) ) )*
                    loop2:
                    do {
                        int alt2=2;
                        int LA2_0 = input.LA(1);

                        if ( ((LA2_0>=INDENT && LA2_0<=INT)||(LA2_0>=UNICODE_ESC && LA2_0<=COMMENT)) ) {
                            alt2=1;
                        }


                        switch (alt2) {
                    	case 1 :
                    	    // /Users/andrewrumble/Fphp.g:0:0: e1= ( ESC_SEQ | ~ ( '\\\\' | '\\n' | '\\'' ) )
                    	    {
                    	    e1=(Token)input.LT(1);
                    	    if ( (input.LA(1)>=INDENT && input.LA(1)<=INT)||(input.LA(1)>=UNICODE_ESC && input.LA(1)<=COMMENT) ) {
                    	        input.consume();
                    	        state.errorRecovery=false;state.failed=false;
                    	    }
                    	    else {
                    	        if (state.backtracking>0) {state.failed=true; return value;}
                    	        MismatchedSetException mse = new MismatchedSetException(null,input);
                    	        throw mse;
                    	    }


                    	    }
                    	    break;

                    	default :
                    	    break loop2;
                        }
                    } while (true);

                    if ( state.backtracking==0 ) {
                      value += (e1!=null?e1.getText():null);
                    }
                    match(input,48,FOLLOW_48_in_string329); if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                      value += "\"";
                    }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "string"


    // $ANTLR start "program"
    // /Users/andrewrumble/Fphp.g:148:1: program returns [String value] : e= statement (e= statement )* EOF ;
    public final String program() throws RecognitionException {
        String value = null;

        String e = null;


        try {
            // /Users/andrewrumble/Fphp.g:149:2: (e= statement (e= statement )* EOF )
            // /Users/andrewrumble/Fphp.g:149:4: e= statement (e= statement )* EOF
            {
            pushFollow(FOLLOW_statement_in_program854);
            e=statement();

            state._fsp--;
            if (state.failed) return value;
            if ( state.backtracking==0 ) {
              value = "<?php\n " +e;
            }
            // /Users/andrewrumble/Fphp.g:149:49: (e= statement )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( ((LA4_0>=IF && LA4_0<=RETURN)||(LA4_0>=PRINT && LA4_0<=CLASS)||(LA4_0>=NEW && LA4_0<=L_PAREN)||(LA4_0>=QUOTE && LA4_0<=VISIBILITY)||LA4_0==BOOLEAN||(LA4_0>=IDENTIFIER && LA4_0<=VARIABLE)||(LA4_0>=INT && LA4_0<=NEWLINE)||LA4_0==48) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /Users/andrewrumble/Fphp.g:149:50: e= statement
            	    {
            	    pushFollow(FOLLOW_statement_in_program861);
            	    e=statement();

            	    state._fsp--;
            	    if (state.failed) return value;
            	    if ( state.backtracking==0 ) {
            	      value += e;
            	    }

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            match(input,EOF,FOLLOW_EOF_in_program867); if (state.failed) return value;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "program"


    // $ANTLR start "statement"
    // /Users/andrewrumble/Fphp.g:151:1: statement returns [String value] : ( expression | assignment | function | RETURN expression | (e1= conditional )+ | NEWLINE | PRINT expression | each | class_block );
    public final String statement() throws RecognitionException {
        String value = null;

        Token RETURN4=null;
        String e1 = null;

        String expression1 = null;

        String assignment2 = null;

        String function3 = null;

        String expression5 = null;

        String expression6 = null;

        String each7 = null;

        String class_block8 = null;


        try {
            // /Users/andrewrumble/Fphp.g:152:2: ( expression | assignment | function | RETURN expression | (e1= conditional )+ | NEWLINE | PRINT expression | each | class_block )
            int alt6=9;
            alt6 = dfa6.predict(input);
            switch (alt6) {
                case 1 :
                    // /Users/andrewrumble/Fphp.g:152:4: expression
                    {
                    pushFollow(FOLLOW_expression_in_statement880);
                    expression1=expression();

                    state._fsp--;
                    if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                      value = expression1 + ";";
                    }

                    }
                    break;
                case 2 :
                    // /Users/andrewrumble/Fphp.g:153:4: assignment
                    {
                    pushFollow(FOLLOW_assignment_in_statement888);
                    assignment2=assignment();

                    state._fsp--;
                    if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                      value = assignment2 + ";";
                    }

                    }
                    break;
                case 3 :
                    // /Users/andrewrumble/Fphp.g:154:4: function
                    {
                    pushFollow(FOLLOW_function_in_statement895);
                    function3=function();

                    state._fsp--;
                    if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                      value = function3;
                    }

                    }
                    break;
                case 4 :
                    // /Users/andrewrumble/Fphp.g:155:4: RETURN expression
                    {
                    RETURN4=(Token)match(input,RETURN,FOLLOW_RETURN_in_statement902); if (state.failed) return value;
                    pushFollow(FOLLOW_expression_in_statement904);
                    expression5=expression();

                    state._fsp--;
                    if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                      value = (RETURN4!=null?RETURN4.getText():null) +" "+ expression5 + ";";
                    }

                    }
                    break;
                case 5 :
                    // /Users/andrewrumble/Fphp.g:156:4: (e1= conditional )+
                    {
                    if ( state.backtracking==0 ) {
                      value = "";
                    }
                    // /Users/andrewrumble/Fphp.g:156:18: (e1= conditional )+
                    int cnt5=0;
                    loop5:
                    do {
                        int alt5=2;
                        switch ( input.LA(1) ) {
                        case IF:
                            {
                            int LA5_2 = input.LA(2);

                            if ( (synpred16_Fphp()) ) {
                                alt5=1;
                            }


                            }
                            break;
                        case ELIF:
                            {
                            int LA5_3 = input.LA(2);

                            if ( (synpred16_Fphp()) ) {
                                alt5=1;
                            }


                            }
                            break;
                        case ELSE:
                            {
                            int LA5_4 = input.LA(2);

                            if ( (synpred16_Fphp()) ) {
                                alt5=1;
                            }


                            }
                            break;

                        }

                        switch (alt5) {
                    	case 1 :
                    	    // /Users/andrewrumble/Fphp.g:156:19: e1= conditional
                    	    {
                    	    pushFollow(FOLLOW_conditional_in_statement915);
                    	    e1=conditional();

                    	    state._fsp--;
                    	    if (state.failed) return value;
                    	    if ( state.backtracking==0 ) {
                    	      value += e1;
                    	    }

                    	    }
                    	    break;

                    	default :
                    	    if ( cnt5 >= 1 ) break loop5;
                    	    if (state.backtracking>0) {state.failed=true; return value;}
                                EarlyExitException eee =
                                    new EarlyExitException(5, input);
                                throw eee;
                        }
                        cnt5++;
                    } while (true);


                    }
                    break;
                case 6 :
                    // /Users/andrewrumble/Fphp.g:157:4: NEWLINE
                    {
                    match(input,NEWLINE,FOLLOW_NEWLINE_in_statement924); if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                      value = "\n";
                    }

                    }
                    break;
                case 7 :
                    // /Users/andrewrumble/Fphp.g:158:4: PRINT expression
                    {
                    match(input,PRINT,FOLLOW_PRINT_in_statement931); if (state.failed) return value;
                    pushFollow(FOLLOW_expression_in_statement933);
                    expression6=expression();

                    state._fsp--;
                    if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                      value = "print " + expression6 + ";";
                    }

                    }
                    break;
                case 8 :
                    // /Users/andrewrumble/Fphp.g:159:4: each
                    {
                    pushFollow(FOLLOW_each_in_statement940);
                    each7=each();

                    state._fsp--;
                    if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                      value = each7;
                    }

                    }
                    break;
                case 9 :
                    // /Users/andrewrumble/Fphp.g:160:4: class_block
                    {
                    pushFollow(FOLLOW_class_block_in_statement947);
                    class_block8=class_block();

                    state._fsp--;
                    if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                      value = class_block8;
                    }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "statement"


    // $ANTLR start "assignment"
    // /Users/andrewrumble/Fphp.g:163:1: assignment returns [String value] : ( VARIABLE ASSIGNMENT_OPERATOR expression | array_entry ASSIGNMENT_OPERATOR expression | class_member ASSIGNMENT_OPERATOR expression );
    public final String assignment() throws RecognitionException {
        String value = null;

        Token VARIABLE9=null;
        Token ASSIGNMENT_OPERATOR10=null;
        Token ASSIGNMENT_OPERATOR13=null;
        Token ASSIGNMENT_OPERATOR16=null;
        String expression11 = null;

        String array_entry12 = null;

        String expression14 = null;

        String class_member15 = null;

        String expression17 = null;


        try {
            // /Users/andrewrumble/Fphp.g:164:2: ( VARIABLE ASSIGNMENT_OPERATOR expression | array_entry ASSIGNMENT_OPERATOR expression | class_member ASSIGNMENT_OPERATOR expression )
            int alt7=3;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==VARIABLE) ) {
                switch ( input.LA(2) ) {
                case ASSIGNMENT_OPERATOR:
                    {
                    alt7=1;
                    }
                    break;
                case L_PAREN:
                    {
                    alt7=2;
                    }
                    break;
                case OBJECT_MEMBER:
                    {
                    alt7=3;
                    }
                    break;
                default:
                    if (state.backtracking>0) {state.failed=true; return value;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 1, input);

                    throw nvae;
                }

            }
            else {
                if (state.backtracking>0) {state.failed=true; return value;}
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }
            switch (alt7) {
                case 1 :
                    // /Users/andrewrumble/Fphp.g:164:4: VARIABLE ASSIGNMENT_OPERATOR expression
                    {
                    VARIABLE9=(Token)match(input,VARIABLE,FOLLOW_VARIABLE_in_assignment965); if (state.failed) return value;
                    ASSIGNMENT_OPERATOR10=(Token)match(input,ASSIGNMENT_OPERATOR,FOLLOW_ASSIGNMENT_OPERATOR_in_assignment967); if (state.failed) return value;
                    pushFollow(FOLLOW_expression_in_assignment969);
                    expression11=expression();

                    state._fsp--;
                    if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                      value = (VARIABLE9!=null?VARIABLE9.getText():null) + (ASSIGNMENT_OPERATOR10!=null?ASSIGNMENT_OPERATOR10.getText():null) + expression11;
                    }

                    }
                    break;
                case 2 :
                    // /Users/andrewrumble/Fphp.g:165:4: array_entry ASSIGNMENT_OPERATOR expression
                    {
                    pushFollow(FOLLOW_array_entry_in_assignment976);
                    array_entry12=array_entry();

                    state._fsp--;
                    if (state.failed) return value;
                    ASSIGNMENT_OPERATOR13=(Token)match(input,ASSIGNMENT_OPERATOR,FOLLOW_ASSIGNMENT_OPERATOR_in_assignment978); if (state.failed) return value;
                    pushFollow(FOLLOW_expression_in_assignment980);
                    expression14=expression();

                    state._fsp--;
                    if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                      value = array_entry12 + (ASSIGNMENT_OPERATOR13!=null?ASSIGNMENT_OPERATOR13.getText():null) + expression14;
                    }

                    }
                    break;
                case 3 :
                    // /Users/andrewrumble/Fphp.g:166:4: class_member ASSIGNMENT_OPERATOR expression
                    {
                    pushFollow(FOLLOW_class_member_in_assignment987);
                    class_member15=class_member();

                    state._fsp--;
                    if (state.failed) return value;
                    ASSIGNMENT_OPERATOR16=(Token)match(input,ASSIGNMENT_OPERATOR,FOLLOW_ASSIGNMENT_OPERATOR_in_assignment989); if (state.failed) return value;
                    pushFollow(FOLLOW_expression_in_assignment991);
                    expression17=expression();

                    state._fsp--;
                    if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                      value = class_member15 + (ASSIGNMENT_OPERATOR16!=null?ASSIGNMENT_OPERATOR16.getText():null) + expression17;
                    }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "assignment"


    // $ANTLR start "atom"
    // /Users/andrewrumble/Fphp.g:169:1: atom returns [String value] : ( INT | VARIABLE | VARIABLE '.' IDENTIFIER | BOOLEAN | function_call | NEW e1= instance_call | class_member | new_array | array_entry | string );
    public final String atom() throws RecognitionException {
        String value = null;

        Token INT18=null;
        Token VARIABLE19=null;
        Token VARIABLE20=null;
        Token IDENTIFIER21=null;
        Token BOOLEAN22=null;
        String e1 = null;

        String function_call23 = null;

        String class_member24 = null;

        String new_array25 = null;

        String array_entry26 = null;

        String string27 = null;


        try {
            // /Users/andrewrumble/Fphp.g:170:2: ( INT | VARIABLE | VARIABLE '.' IDENTIFIER | BOOLEAN | function_call | NEW e1= instance_call | class_member | new_array | array_entry | string )
            int alt8=10;
            alt8 = dfa8.predict(input);
            switch (alt8) {
                case 1 :
                    // /Users/andrewrumble/Fphp.g:170:4: INT
                    {
                    INT18=(Token)match(input,INT,FOLLOW_INT_in_atom1009); if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                      value = (INT18!=null?INT18.getText():null);
                    }

                    }
                    break;
                case 2 :
                    // /Users/andrewrumble/Fphp.g:171:4: VARIABLE
                    {
                    VARIABLE19=(Token)match(input,VARIABLE,FOLLOW_VARIABLE_in_atom1016); if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                      value = (VARIABLE19!=null?VARIABLE19.getText():null);
                    }

                    }
                    break;
                case 3 :
                    // /Users/andrewrumble/Fphp.g:172:4: VARIABLE '.' IDENTIFIER
                    {
                    VARIABLE20=(Token)match(input,VARIABLE,FOLLOW_VARIABLE_in_atom1023); if (state.failed) return value;
                    match(input,OBJECT_MEMBER,FOLLOW_OBJECT_MEMBER_in_atom1025); if (state.failed) return value;
                    IDENTIFIER21=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_atom1027); if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                      value = (VARIABLE20!=null?VARIABLE20.getText():null) + "->" + (IDENTIFIER21!=null?IDENTIFIER21.getText():null);
                    }

                    }
                    break;
                case 4 :
                    // /Users/andrewrumble/Fphp.g:173:4: BOOLEAN
                    {
                    BOOLEAN22=(Token)match(input,BOOLEAN,FOLLOW_BOOLEAN_in_atom1034); if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                      value = (BOOLEAN22!=null?BOOLEAN22.getText():null);
                    }

                    }
                    break;
                case 5 :
                    // /Users/andrewrumble/Fphp.g:174:4: function_call
                    {
                    pushFollow(FOLLOW_function_call_in_atom1041);
                    function_call23=function_call();

                    state._fsp--;
                    if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                      value = function_call23;
                    }

                    }
                    break;
                case 6 :
                    // /Users/andrewrumble/Fphp.g:175:4: NEW e1= instance_call
                    {
                    match(input,NEW,FOLLOW_NEW_in_atom1048); if (state.failed) return value;
                    pushFollow(FOLLOW_instance_call_in_atom1052);
                    e1=instance_call();

                    state._fsp--;
                    if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                      value = "new " + e1;
                    }

                    }
                    break;
                case 7 :
                    // /Users/andrewrumble/Fphp.g:176:4: class_member
                    {
                    pushFollow(FOLLOW_class_member_in_atom1059);
                    class_member24=class_member();

                    state._fsp--;
                    if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                      value = class_member24;
                    }
